test/types/range/elliot/badRangeLiterals/badLowBoundedCountedRange.good
badLowBoundedCountedRange.chpl:3: error: Bound of 'low..' must be an integer
